# NosUpdate

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
CMake/: Version.hpp.in  Versioning.cmake
Extra/: GenerateDevCerts.ps1
Headers/: Version.hpp
NosUpdateLib/: CMakeLists.txt
NosUpdateLib/Include/NosUpdate/: Definitions.hpp  ErrorCodes.hpp  FileInfo.hpp  Helper.hpp  Request.hpp  Requests.hpp  Responses.hpp  Test.hpp  Version.hpp  WinVersion.hpp
NosUpdateLib/Include/NosUpdate/BoostExpand/: polymorphic_portable_binary_iarchive.hpp  polymorphic_portable_binary_oarchive.hpp  portable_binary_archive.hpp  portable_binary_iarchive.hpp  portable_binary_oarchive.hpp
NosUpdateLib/Include/NosUpdate/FileNet/: FileReceive.hpp  FileSend.hpp
NosUpdateLib/Include/NosUpdate/Info/: FileInfo.hpp  ProgramInfo.hpp
NosUpdateLib/Include/NosUpdate/Internal/: Export.hpp
NosUpdateLib/Include/NosUpdate/Request/: Request.hpp  UpdateRequest.hpp  VersionRequest.hpp
NosUpdateLib/Include/NosUpdate/Response/: Response.hpp  UpdateResponse.hpp  VersionResponse.hpp
NosUpdateLib/Source/: FileInfo.cpp  Request.cpp  Test.cpp
NosUpdateLib/Source/BoostExpand/: polymorphic_portable_binary_iarchive.cpp  polymorphic_portable_binary_oarchive.cpp  portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
NosUpdateLib/Source/FileNet/: FileReceive.cpp  FileSend.cpp
NosUpdateLib/Source/Info/: FileInfo.cpp  ProgramInfo.cpp
NosUpdateLib/Source/Request/: Request.cpp  UpdateRequest.cpp  VersionRequest.cpp
NosUpdateLib/Source/Response/: Response.cpp  UpdateRequest.cpp  UpdateResponse.cpp  VersionRequest.cpp  VersionResponse.cpp
NosUpdateServer/: CMakeLists.txt  ServerMain.cpp  main.cpp
NosUpdateServer/Header/: Helper.hpp  TCPConnection.hpp  TLSConnection.hpp  TLSServer.hpp
NosUpdateServer/Source/: TCPConnection.cpp  TLSConnection.cpp  TLSServer.cpp
NosUpdateTester/: CMakeLists.txt  TesterMain.cpp  main.cpp
NosUpdateTester/TesterLib/: CMakeLists.txt
NosUpdateTester/TesterLib/Include/TesterLib/: Request.hpp
NosUpdateTester/TesterLib/Include/TesterLib/Request/: UpdateRequest.hpp
NosUpdateTester/TesterLib/Source/: Request.cpp
NosUpdateTester/TesterLib/Source/Request/: UpdateRequest.cpp
NosUpdater/: CMakeLists.txt  UpdaterMain.cpp
NosUpdater/Header/: TLSClient.hpp
NosUpdater/Source/: TLSClient.cpp
